--- a/templates/projectadmin/projects.html
+++ b/templates/projectadmin/projects.html
@@ -30,7 +30,7 @@
     </div>
     <div class="card text-dark mb-3">
         <div class="card-header">
-            <h5 class="card-title text-white float-left">All Groups</h5>
+            <h5 class="card-title text-white float-left">All Projects</h5>
         </div>
         <table class="table table-borderless {% if user.profile.dark_mode %}table-dark{% else %}table-light{% endif %} table-hover">
             <thead class="thead-dark">
@@ -47,6 +47,19 @@
                 </tr>
             </thead>
             <tbody>
+                {% for project in PROJECTS %}
+                    <tr>
+                        <td></td>
+                        <td>{{ project.name }}</td>
+                        <td><a href="{% url 'admin-user-detail' id=project.owner.id %}">{% if project.owner.first_name %}{{ project.owner.first_name }} {{ project.owner.last_name }}{% else %}{{ project.username }}{% endif %}</a></td>
+                        <td><span class="badge badge-info">{{ project.members.count }}</span></td>
+                        <td><span class="badge badge-secondary">{{ project.start_date }}-{{ project.end_date }}</span></td>
+                        <td><span class="badge badge-{% if project.status == "not_started" or project.status == "blocked" or project.status == "cancelled" %}blocked{% elif project.status == "in_progress" %}warning{% else %}success{% endif %}">{{ project.status }}</span></td>
+                        <td><span class="badge badge-info">{{ project.tasks.count }}</span></td>
+                        <td><span class="badge badge-danger">{{ project.issues.count }}</span></td>
+                        <td></td>
+                    </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
