--- a/templates/projectadmin/projects.html
+++ b/templates/projectadmin/projects.html
@@ -53,7 +53,7 @@
                         <td>{{ project.name }}</td>
                         <td><a href="{% url 'admin-user-detail' id=project.owner.id %}">{% if project.owner.first_name %}{{ project.owner.first_name }} {{ project.owner.last_name }}{% else %}{{ project.username }}{% endif %}</a></td>
                         <td><span class="badge badge-info">{{ project.members.count }}</span></td>
-                        <td><span class="badge badge-secondary">{{ project.start_date }}-{{ project.end_date }}</span></td>
+                        <td><span class="badge badge-secondary">{{ project.start_date }}-{{ project.end_date|default:'Unknown' }}</span></td>
                         <td><span class="badge badge-{% if project.status == "not_started" or project.status == "blocked" or project.status == "cancelled" %}blocked{% elif project.status == "in_progress" %}warning{% else %}success{% endif %}">{{ project.get_status_display }}</span></td>
                         <td><span class="badge badge-info">{{ project.tasks.count }}</span></td>
                         <td><span class="badge badge-danger">{{ project.issues.count }}</span></td>
