--- a/templates/projectadmin/projects.html
+++ b/templates/projectadmin/projects.html
@@ -49,7 +49,8 @@
             <tbody>
                 {% for project in PROJECTS %}
                     <tr>
-                        <td></td>
+                        {% load static %}
+                        <td><img class="img-fluid" src="{% static "project.logo.path" %}" /></td>
                         <td>{{ project.name }}</td>
                         <td><a href="{% url 'admin-user-detail' id=project.owner.id %}">{% if project.owner.first_name %}{{ project.owner.first_name }} {{ project.owner.last_name }}{% else %}{{ project.username }}{% endif %}</a></td>
                         <td><span class="badge badge-info">{{ project.members.count }}</span></td>
