--- a/templates/projectadmin/projects.html
+++ b/templates/projectadmin/projects.html
@@ -2,7 +2,7 @@
 {% block page_content %}
 <form action="" method="post">
     {% csrf_token %}
-    <div class="row d-sm-flex align-items-center justify-content-between mb-4">
+    <div class="row d-sm-flex align-items-center justify-content-between">
         <div class="col-md-12">
             <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}</h1>
             <nav aria-label="breadcrumb">
