--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -47,6 +47,16 @@
                         <label for="project-status">Status</label>
                         <input class="form-control bg-{% if PROJECT.status == "not_started" or PROJECT.status == "blocked" or PROJECT.status == "cancelled" %}blocked{% elif PROJECT.status == "in_progress" or PROJECT.status == "on_hold" %}warning{% else %}success{% endif %}" name="project-status" id="project-status" value="{{ PROJECT.get_status_display }}" disabled="disabled"/>
                     </div>
+                    <div class="form-group">
+                        <label for="project-start-date">Project Started</label>
+                        <input class="form-control" name="project-start-date" id="project-start-date" value="{{ PROJECT.start_date }}" disabled="disabled" />
+                    </div>
+                    {% if project.end_date %}
+                    <div class="form-group">
+                        <label for="project-start-date">Project Ended</label>
+                        <input class="form-control" name="project-start-date" id="project-start-date" value="{{ PROJECT.start_date }}" disabled="disabled" />
+                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
