--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -35,6 +35,16 @@
                 <div class="card-header">
                     <h5 class="card-title float-left">Details</h5>
                 </div>
+                <div class="card-body">
+                    <div class="form-group">
+                        <label for="project-name">Project Name</label>
+                        <input class="form-control" name="project-name" id="project-name" value="{{ PROJECT.name }}" disabled="disabled"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="project-description">Project Description</label>
+                        <textarea class="form-control" name="project-description" id="project-description" rows="5" disabled="disabled">{{ PROJECT.description }}</textarea>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-md-5">
