--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -92,7 +92,7 @@
                 <div class="card-body">
                     <div class="form-group">
                         <label for="project-owner">Owner</label>
-                        <input class="form-control" name="project-owner" id="project-owner" value="{% if PROJECT.owner.first_name %}{{ PROJECT.owner.first_name }} {{ PROJECT.owner.last_name }}{% else %}{{ PROJECT.owner.username }}{% endif %}" disabled="disabled" />
+                        <input class="form-control" name="project-owner" id="project-owner" value="@{{ PROJECT.owner.username }} {% if PROJECT.owner.first_name %}({{ PROJECT.owner.first_name }} {{ PROJECT.owner.last_name }}){% endif %}" disabled="disabled" />
                     </div>
                 </div>
             </div>
