--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -97,6 +97,14 @@
                             <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="project-owner-tag" name="project-owner" id="project-owner" value="{{ PROJECT.owner.username }} {% if PROJECT.owner.first_name %}({{ PROJECT.owner.first_name }} {{ PROJECT.owner.last_name }}){% endif %}" disabled="disabled"/>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="project-members">Members</label>
+                        <select multiple class="form-select" name="project-members" id="project-members" disabled="disabled">
+                            {% for member in PROJECT.members %}
+                                <option value="{{ member.id }}" selected="selected">{{ member.username }} {% if member.first_name %}({{ PROJECT.first_name }} {{ PROJECT.last_name }}){% endif %}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
