--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="form-group">
                         <label for="project-description">Project Description</label>
-                        <textarea class="form-control" name="project-description" id="project-description" rows="15" disabled="disabled">{{ PROJECT.description }}</textarea>
+                        <textarea class="form-control" name="project-description" id="project-description" rows="20" disabled="disabled">{{ PROJECT.description }}</textarea>
                     </div>
                 </div>
             </div>
@@ -141,6 +141,17 @@
                                 <td></td>
                             </tr>
                         {% else %}
+                            {% for task in PROJECT.tasks.all %}
+                                <tr>
+                                    <td>{{ task.name }}</td>
+                                    <td>{{ task.description }}</td>
+                                    <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=task.assignee.id %}">{{ assignee.username }}</a></span></td>
+                                    <td><span class="badge badge-secondary">{{ task.start_date }}-{% if task.end_date %}{{ task.end_date }}{% else %}{% if task.status == "completed" %}{{ task.start_date }}{% else %}Unknown{% endif %}{% endif %}</span></td>
+                                    <td><span class="badge badge-{% if task.status == "not_started" or task.status == "blocked" or task.status == "cancelled" %}blocked{% elif task.status == "in_progress" or task.status == "on_hold" %}warning{% else %}success{% endif %}">{{ task.get_status_display }}</span></td>
+                                    <td><span class="badge badge-secondary">{{ task.waited_on.count }}</span></td>
+                                    <td><a href="#" class="btn btn-info btn-sm"><i class="fas fa-wrench"></i></a></td>
+                                </tr>
+                            {% endfor %}
                         {% endif %}
                     </tbody>
                 </table>
