--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -145,7 +145,7 @@
                                 <tr>
                                     <td>{{ task.name }}</td>
                                     <td>{{ task.description }}</td>
-                                    <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=task.assignee.id %}">{{ assignee.username }}</a></span></td>
+                                    <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=task.assignee.id %}">{{ task.assignee.username }}</a></span></td>
                                     <td><span class="badge badge-secondary">{{ task.start_date }}-{% if task.end_date %}{{ task.end_date }}{% else %}{% if task.status == "completed" %}{{ task.start_date }}{% else %}Unknown{% endif %}{% endif %}</span></td>
                                     <td><span class="badge badge-{% if task.status == "not_started" or task.status == "blocked" or task.status == "cancelled" %}blocked{% elif task.status == "in_progress" or task.status == "on_hold" %}warning{% else %}success{% endif %}">{{ task.get_status_display }}</span></td>
                                     <td><span class="badge badge-secondary">{{ task.waited_on.count }}</span></td>
