--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -122,7 +122,7 @@
                         <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Description</th>
-                            <th scope="col">Assigned</th>
+                            <th scope="col">Assignee</th>
                             <th scope="col">Timeline</th>
                             <th scope="col">Status</th>
                             <th scope="col">Requirements</th>
