--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -1,4 +1,5 @@
 {% extends "adminpanel/base.html" %}
+{% load project_filters %}
 {% block page_content %}
 <form action="" method="post">
     {% csrf_token %}
@@ -148,7 +149,7 @@
                                     <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=task.assignee.id %}">{{ task.assignee.username }}</a></span></td>
                                     <td><span class="badge badge-secondary">{{ task.start_date }}-{% if task.end_date %}{{ task.end_date }}{% else %}{% if task.status == "completed" %}{{ task.start_date }}{% else %}Unknown{% endif %}{% endif %}</span></td>
                                     <td><span class="badge badge-{% if task.status == "not_started" or task.status == "blocked" or task.status == "cancelled" %}blocked{% elif task.status == "in_progress" or task.status == "on_hold" %}warning{% else %}success{% endif %}">{{ task.get_status_display }}</span></td>
-                                    <td class="text-center"><span class="badge badge-secondary">{{ task.waited_on.count }}</span></td>
+                                    <td class="text-center"><span class="badge badge-secondary">{{ task.waited_on.all|count_completed }}{{ task.waited_on.count }}</span></td>
                                     <td><a href="#" class="btn btn-info btn-sm"><i class="fas fa-wrench fa-sm"></i></a></td>
                                 </tr>
                             {% endfor %}
