--- a/templates/projectadmin/projects.html
+++ b/templates/projectadmin/projects.html
@@ -55,7 +55,7 @@
                         <td><a href="{% url 'admin-user-detail' id=project.owner.id %}">{% if project.owner.first_name %}{{ project.owner.first_name }} {{ project.owner.last_name }}{% else %}{{ project.username }}{% endif %}</a></td>
                         <td><span class="badge badge-info">{{ project.members.count }}</span></td>
                         <td><span class="badge badge-secondary">{{ project.start_date }}-{% if project.end_date %}{{ project.end_date }}{% else %}{% if project.status == "completed" %}{{ project.start_date }}{% else %}Unknown{% endif %}{% endif %}</span></td>
-                        <td><span class="badge badge-{% if project.status == "not_started" or project.status == "blocked" or project.status == "cancelled" %}blocked{% elif project.status == "in_progress" or project.status == "on_hold" %}warning{% else %}success{% endif %}">{{ project.get_status_display }}</span></td>
+                        <td><span class="badge badge-{% if project.status == "not_started" or project.status == "blocked" or project.status == "cancelled" %}danger{% elif project.status == "in_progress" or project.status == "on_hold" %}warning{% else %}success{% endif %}">{{ project.get_status_display }}</span></td>
                         <td class="text-center"><span class="badge badge-info">{{ project.tasks.count }}</span></td>
                         <td class="text-center"><span class="badge badge-danger">{{ project.issues.count }}</span></td>
                         <td></td>
