--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -178,7 +178,7 @@
                                 <tr>
                                     <td>{{ issue.name }}</td>
                                     <td>{{ issue.description }}</td>
-                                    <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=task.assignee.id %}">{{ task.assignee.username }}</a></span></td>
+                                    <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=issue.assignee.id %}">{{ issue.assignee.username }}</a></span></td>
                                     <td><span class="badge badge-secondary">{{ issue.created_at }}</span></td>
                                     <td><span class="badge badge-{% if issue.status == "closed" %}danger{% elif issue.status == "in_progress" or issue.status == "resolved" %}success{% else %}warning{% endif %}">{{ issue.get_status_display }}</span></td>
                                     <td><span class="badge badge-{% if issue.severity == "critical" or issue.severity == "high" %}danger{% elif issue.severity == "medium" %}warning{% else %}success{% endif %}">{{ issue.get_status_display }}</span></td>
