--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -1,6 +1,6 @@
 {% extends "adminpanel/base.html" %}
 {% load project_filters %}
-{% load math_filters %}
+{% load mathfilters %}
 {% block page_content %}
 <form action="" method="post">
     {% csrf_token %}
