Drop Project Filters

--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -1,5 +1,4 @@
 {% extends "adminpanel/base.html" %}
-{% load project_filters %}
 {% load mathfilters %}
 {% block page_content %}
 <form action="" method="post">
@@ -149,7 +148,7 @@
                                     <td>{{ task.description }}</td>
                                     <td><span class="badge badge-info"><a href="{% url 'admin-user-detail' id=task.assignee.id %}">{{ task.assignee.username }}</a></span></td>
                                     <td><span class="badge badge-secondary">{{ task.start_date }}-{% if task.end_date %}{{ task.end_date }}{% else %}{% if task.status == "completed" %}{{ task.start_date }}{% else %}Unknown{% endif %}{% endif %}</span></td>
-                                    <td><span class="badge badge-{% if task.status == "not_started" or task.status == "blocked" or task.status == "cancelled" %}danger{% elif task.status == "in_progress" or task.status == "on_hold" %}warning{% else %}success{% endif %}">{% if task.requirements.all|sum_count_completed:task.issues.all == task.requirements.count|add:task.issues.count %}{{ task.get_status_display }}{% else %}Unmet Requirements{% endif %}</span></td>
+                                    <td><span class="badge badge-{% if task.status == "not_started" or task.status == "blocked" or task.status == "cancelled" %}danger{% elif task.status == "in_progress" or task.status == "on_hold" %}warning{% else %}success{% endif %}">{% if task.completed_requirements == task.total_requirements %}{{ task.get_status_display }}{% else %}Unmet Requirements{% endif %}</span></td>
                                     <td class="text-center"><span class="badge badge-{% if task.total_requirements == 0 %}secondary{% elif task.completed_requirements == task.total_requirements %}success{% else %}danger{% endif %}">{{ task.completed_requirements }}/{{ task.total_requirements }}</span></td>
                                     <td><a href="#" class="btn btn-info btn-sm"><i class="fas fa-wrench fa-sm"></i></a></td>
                                 </tr>
