--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -187,6 +187,18 @@
                     </tbody>
                 </table>
             </div>
+            <div class="card text-dark mb-3">
+                <div class="card-header bg-danger">
+                    <h5 class="card-title">Danger Zone</h5>
+                </div>
+                <div class="card-body">
+                    <div class="form-group">
+                        <label>Transfer Ownership</label>
+                        <small>Transfer the ownership of this project to a different user.</small>
+                        <a href="#" class="btn btn-danger">Transfer Ownership</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </form>
