--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -193,9 +193,10 @@
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        <label>Transfer Ownership</label><br>
-                        <small>Transfer the ownership of this project to a different user.</small>
+                        <label>Transfer Ownership</label>
                         <a href="#" class="btn btn-danger float-right">Transfer Ownership</a>
+                        <br>
+                        <small>Transfer the ownership of this project to a different user.</small>
                     </div>
                 </div>
             </div>
