--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        <label>Transfer Ownership</label>
+                        <p>Transfer Ownership</p>
                         <a href="#" class="btn btn-danger float-right">Transfer Ownership</a>
                         <br>
                         <small>Transfer the ownership of this project to a different user.</small>
