--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -193,9 +193,8 @@
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        <p>Transfer Ownership</p>
-                        <a href="#" class="btn btn-danger float-right">Transfer Ownership</a>
-                        <br>
+                        <a href="#" class="btn btn-outline-danger float-right">Transfer Ownership</a>
+                        <h5>Transfer Ownership</h5>
                         <small>Transfer the ownership of this project to a different user.</small>
                     </div>
                 </div>
