--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -197,6 +197,12 @@
                         <h5>Transfer Ownership</h5>
                         <small>Transfer the ownership of this project to a different user.</small>
                     </div>
+                    <hr>
+                    <div class="form-group">
+                        <a href="#" class="btn btn-outline-danger float-right">Delete Project</a>
+                        <h5>Delete Project</h5>
+                        <small>This process is irreversible. Once deleted, it's gone forever.</small>
+                    </div>
                 </div>
             </div>
         </div>
