--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -12,6 +12,7 @@
                     <li class="breadcrumb-item active" aria-current="page">{{ PROJECT.name }}</li>
                 </ol>
             </nav>
+            <a href="#" class="btn btn-info float-right">Edit Project</a>
         </div>
         {% if success %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
