--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     <div class="row d-sm-flex align-items-center justify-content-between">
         <div class="col-md-12">
-            <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}</h1>
+            <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}<a href="#" class="btn btn-info float-right">Edit Project</a></h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'admin-dashboard-home' %}">Admin Dashboard</a></li>
@@ -12,7 +12,6 @@
                     <li class="breadcrumb-item active" aria-current="page">{{ PROJECT.name }}</li>
                 </ol>
             </nav>
-            <a href="#" class="btn btn-info float-right">Edit Project</a>
         </div>
         {% if success %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
